Update api tests